added source anchor

--- a/index.html
+++ b/index.html
@@ -282,5 +282,7 @@
     </div>
   </div>
 </section>
+
+<a class="code-source" href="https://github.com/NaveenPantra/time-series-bubble-chart">[Source @ github.com]</a>
 </body>
 </html>
